# example_package_ros

./: README.md
mon_package_ros/: CMakeLists.txt  package.xml
mon_package_ros/launch/: mon_launch_file.launch
mon_package_ros/msg/: MonMessage.msg
mon_package_ros/src/: emetteur.py  recepteur
